--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/layout.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/layout.html.twig
@@ -12,6 +12,7 @@
         <link rel="icon" type="image/png" href="{{ asset('favicon.png') }}">
         {# jQuery #}
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="http://malsup.github.com/jquery.form.js"></script>
         {# Стили #}
         <link type="text/css" href="{{ asset('assets/css/css-reset.css') }}" rel="stylesheet"/>
         <link type="text/css" href="{{ asset('assets/css/bootstrap.css') }}" rel="stylesheet"/>
@@ -20,6 +21,7 @@
         {# Шрифты #}
         <link type="text/css" href="{{ asset('assets/css/font-awesome.css') }}" rel="stylesheet"/>
         {# Скрипты #}
+        <script type="text/javascript" src="{{ asset('assets/js/script.js') }}"></script>
         <script type="text/javascript" src="{{ asset('assets/js/bootstrap.js') }}"></script>
         <script type="text/javascript" src="{{ asset('assets/js/bootstrap-confirmation.js') }}"></script>
     {% endblock head %}
