--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/layout.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/layout.html.twig
@@ -10,11 +10,19 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         {# Favicon #}
         <link rel="icon" type="image/png" href="{{ asset('favicon.png') }}">
-        {# jQuery #}
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="http://malsup.github.com/jquery.form.js"></script>
-        {# Стили #}
+        {% block headjs %}
+            {% block jquery %}
+                <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+                <script src="http://malsup.github.com/jquery.form.js"></script>
+            {% endblock jquery %}
+            {% block headjscripts %}
+                <script type="text/javascript" src="{{ asset('assets/js/script.js') }}"></script>
+                <script type="text/javascript" src="{{ asset('assets/js/bootstrap.js') }}"></script>
+                <script type="text/javascript" src="{{ asset('assets/js/bootstrap-confirmation.js') }}"></script>
+            {% endblock headjscripts %}
+        {% endblock headjs %}
         {% block styles %}
+            {# Стили #}
             <link type="text/css" href="{{ asset('assets/css/css-reset.css') }}" rel="stylesheet"/>
             <link type="text/css" href="{{ asset('assets/css/bootstrap.css') }}" rel="stylesheet"/>
             <link type="text/css" href="{{ asset('assets/css/bootstrap-responsive.css') }}" rel="stylesheet"/>
@@ -22,10 +30,6 @@
         {% endblock styles %}
         {# Шрифты #}
         <link type="text/css" href="{{ asset('assets/css/font-awesome.css') }}" rel="stylesheet"/>
-        {# Скрипты #}
-        <script type="text/javascript" src="{{ asset('assets/js/script.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('assets/js/bootstrap.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('assets/js/bootstrap-confirmation.js') }}"></script>
     {% endblock head %}
 </head>
 <body>
