Работа над форматом комнат

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -56,7 +56,7 @@
         }
 
         .registrationformlogin {
-            text-align: center;
+            text-align: left;
             padding: 13px;
             font-size: 25px;
             margin: 10px 0 10px 0;
