--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
@@ -4,22 +4,16 @@
     <div id="header"></div>
     <div id="game">
         {% block game %}
-            {% block ajax %}
-                <script type="text/javascript">
-                    $('#game').append("<br><span class='plaintext'>Добро пожаловать в Миры Утопии!</span><br>");
-                    $.post("ajax", { chat: "look" },
-                            function(data){
-                                processJson(data);
-                            }, "json");
-                </script>
-            {% endblock ajax %}
+            {% block websocket %}
+                <script type="text/javascript">var hash = '{{ hash }}';</script>
+            {% endblock websocket %}
         {% endblock game %}
     </div>
     <div id="chat">
         {% block chat %}
-        <form id="chatform" action="ajax" method="post">
-            <input id="chatinput" autocomplete="off" name="chat" type="text">
-        </form>
+            <form id="chatform" action="ajax" method="post">
+                <input id="chatinput" autocomplete="off" name="chat" type="text">
+            </form>
         {% endblock chat %}
     </div>
 {% endblock content %}
