--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/layout.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/layout.html.twig
@@ -16,6 +16,7 @@
                 <script src="http://malsup.github.com/jquery.form.js"></script>
             {% endblock jquery %}
             {% block headjscripts %}
+                <script src="https://autobahn.s3.amazonaws.com/autobahnjs/latest/autobahn.min.jgz"></script>
                 <script type="text/javascript" src="{{ asset('assets/js/script.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('assets/js/bootstrap.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('assets/js/bootstrap-confirmation.js') }}"></script>
