--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
@@ -11,7 +11,7 @@
     </div>
     <div id="chat">
         {% block chat %}
-            <form id="chatform" action="ajax" method="post">
+            <form id="chatform">
                 <input id="chatinput" autocomplete="off" name="chat" type="text">
             </form>
         {% endblock chat %}
