Во фронтэнд добавлен макет карты

--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
@@ -2,6 +2,7 @@
 
 {% block content %}
     <div id="header"></div>
+    <div id="map"><img src="{{ asset('assets/img/game_map.png') }}"></div>
     <div id="game">
         {% block game %}
             {% block websocket %}
