--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -36,7 +36,7 @@ body {background-color:white;margin-left:0px;margin-top:0px;margin-right:0px;mar
 	background-color:black;
 	position:absolute;
 	padding:10px;
-	right:0;
+	right:30%;
 	left:0;
 	top:30px;
 	bottom:30px;
@@ -46,6 +46,22 @@ body {background-color:white;margin-left:0px;margin-top:0px;margin-right:0px;mar
 	font-family: "Courier New", monospace;
 	/*font-family: monospace;*/
 	overflow: auto;
+}
+
+#map {
+    background-color:#191919;
+    position:absolute;
+    padding:10px;
+    right:0;
+    left:70%;
+    top:30px;
+    bottom:30px;
+    text-align:center;
+    font-size:12pt;
+    color:#FFFFFF;
+    font-family: "Courier New", monospace;
+    /*font-family: monospace;*/
+    overflow: auto;
 }
 
 #chat {
