--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/test.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/test.html.twig
@@ -4,7 +4,8 @@
 <script src="http://autobahn.s3.amazonaws.com/js/autobahn.min.js"></script>
 <script type="text/javascript">var hash = '{{ hash }}';</script>
 <script>
-    var conn = new ab.Session('ws://localhost:8080',
+//    var conn = new ab.Session('ws://localhost:8080',
+    var conn = new ab.Session('ws://74.122.199.113:8080',
             function() {
                 conn.subscribe('system.channel', function(topic, data) {
                     // This is where you would add the new article to the DOM (beyond the scope of this tutorial)
