Реорганизация вебсоветов. Счетчик переподключения

--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/test.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/test.html.twig
@@ -4,8 +4,8 @@
 <script src="http://autobahn.s3.amazonaws.com/js/autobahn.min.js"></script>
 <script type="text/javascript">var hash = '{{ hash }}';</script>
 <script>
-//    var conn = new ab.Session('ws://localhost:8080',
-    var conn = new ab.Session('ws://74.122.199.113:8080',
+    var conn = new ab.Session('ws://localhost:8080',
+//    var conn = new ab.Session('ws://74.122.199.113:8080',
             function() {
                 conn.subscribe('system.channel', function(topic, data) {
                     // This is where you would add the new article to the DOM (beyond the scope of this tutorial)
@@ -13,11 +13,15 @@
                 });
                 conn.subscribe('personal.' + hash, function(topic, data) {
                     // This is where you would add the new article to the DOM (beyond the scope of this tutorial)
-                    console.log('PERSONAL "' + topic + '" : ' + data.title);
+                    console.log('' + topic + ':');
+                    console.log(data);
                 });
 
+                var send = {};
+                send["CMD"] = "look";
+
                 conn.publish('system.channel', "HASH:::" + hash);
-                conn.publish('personal.' + hash, "CMD::look");
+                conn.publish('personal.' + hash, send);
             },
             function() {
                 console.warn('WebSocket connection closed');
