--- a/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/views/Default/index.html.twig
@@ -2,8 +2,10 @@
 
 {% block content %}
     <div id="header"></div>
-    <div id="map"><img src="{{ asset('assets/img/game_map.png') }}"></div>
-    <div id="game">
+    {% block mapdiv %}
+        <div id="map"><img src="{{ asset('assets/img/game_map.png') }}"></div>
+    {% endblock mapdiv %}
+    <div id="{% block gamedivname %}game{% endblock gamedivname %}">
         {% block game %}
             {% block websocket %}
                 <script type="text/javascript">var hash = '{{ hash }}';</script>
