--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -40,7 +40,7 @@
                 <div class="row">
                     <div class="span2 offset3 text-justify">
                         <div class="registrationformlogin">
-                            Логин
+                            Имя или E-mail
                         </div>
                     </div>
                     <div id="registrationformlogin" class="span4 text-justify">
