Добавлен чат-канал shout, вещающий на всю зону

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -130,3 +130,8 @@ body {background-color:white;margin-left:0px;margin-top:0px;margin-right:0px;mar
 .chatsayphrase {
     color: #fff69b;
 }
+
+/* shout */
+.chatshoutphrase {
+    color: #ff1013;
+}
