Добавлен общий для всего мира чат-канал #33

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -135,3 +135,8 @@ body {background-color:white;margin-left:0px;margin-top:0px;margin-right:0px;mar
 .chatshoutphrase {
     color: #ff1013;
 }
+
+/* ooc chat*/
+.chatoocphrase {
+    color: #5d55ff;
+}
