--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -126,6 +126,10 @@ body {background-color:white;margin-left:0px;margin-top:0px;margin-right:0px;mar
     color: #c1b13d;
 }
 
+.mobsalias {
+    color: #767676;
+}
+
 .roomexits {
 	/*color:#af7e28;*/
 	color:#808080;
